--- a/tournaments/latenightlegs.html
+++ b/tournaments/latenightlegs.html
@@ -194,12 +194,12 @@
              <div class="round quarterfinals current">
                 <div class="round-details">Quarterfinals<br/></div>
                 <ul class="matchup">
-                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">Gal Gadot<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">Elizabeth Olsen<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/k5b4np" target="_blank">Gal Gadot<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/k5b4np" target="_blank">Elizabeth Olsen<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">Dua Lipa<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">Taylor Swift<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/k5b4jr" target="_blank">Dua Lipa<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/k5b4jr" target="_blank">Taylor Swift<span class="score">&nbsp;</span></a></li>
                 </ul>
              </div>     
           </div>
@@ -231,31 +231,31 @@
             <div class="round quarterfinals current">
                 <div class="round-details">Quarterfinals<br/></div>
                 <ul class="matchup">
-                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">&nbsp;<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">&nbsp;<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/k5b4xi" target="_blank">Shailene Woodley<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/k5b4xi" target="_blank">Vanessa Hudgens<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">&nbsp;<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">&nbsp;<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/k5b4re" target="_blank">Jennifer Aniston<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/k5b4re" target="_blank">Kate Beckinsale<span class="score">&nbsp;</span></a></li>
                 </ul>
              </div>  
              <div class="round round-three current">
                 <div class="round-details">Round 3B<br/></div>
                 <ul class="matchup">
-                    <li class="team team-top name-details"><a href="https://reddit.com/k38yek" target="_blank">Marisa Tomei<span class="score">&nbsp;</span></a></li>
+                    <li class="loser team-top name-details"><a href="https://reddit.com/k38yek" target="_blank">Marisa Tomei<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top name-details"><a href="https://reddit.com/k38yek" target="_blank">Shailene Woodley<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <ul class="matchup">
                     <li class="team team-top name-details"><a href="https://reddit.com/k38yl7" target="_blank">Vanessa Hudgens<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="https://reddit.com/k38yl7" target="_blank">Rachel McAdams<span class="score">&nbsp;</span></a></li>
+                    <li class="loser team-top name-details"><a href="https://reddit.com/k38yl7" target="_blank">Rachel McAdams<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <ul class="matchup">
                     <li class="team team-top name-details"><a href="https://reddit.com/k38yc0" target="_blank">Jennifer Aniston<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="https://reddit.com/k38yc0" target="_blank">Mila Kunis<span class="score">&nbsp;</span></a></li>
+                    <li class="loser team-top name-details"><a href="https://reddit.com/k38yc0" target="_blank">Mila Kunis<span class="score">&nbsp;</span></a></li>
                  </ul>
                  <ul class="matchup">
                     <li class="team team-top name-details"><a href="https://reddit.com/k38yiw" target="_blank">Kate Beckinsale<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="https://reddit.com/k38yiw" target="_blank">Natalie Portman<span class="score">&nbsp;</span></a></li>
+                    <li class="loser team-top name-details"><a href="https://reddit.com/k38yiw" target="_blank">Natalie Portman<span class="score">&nbsp;</span></a></li>
                  </ul>
              </div>
              <!-- END ROUND THREE -->    
