--- a/tournaments/latenightlegs.html
+++ b/tournaments/latenightlegs.html
@@ -195,11 +195,11 @@
                 <div class="round-details">Quarterfinals<br/></div>
                 <ul class="matchup">
                     <li class="team team-top name-details"><a href="https://reddit.com/k5b4np" target="_blank">Gal Gadot<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="https://reddit.com/k5b4np" target="_blank">Elizabeth Olsen<span class="score">&nbsp;</span></a></li>
+                    <li class="loser team-top name-details"><a href="https://reddit.com/k5b4np" target="_blank">Elizabeth Olsen<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <ul class="matchup">
                     <li class="team team-top name-details"><a href="https://reddit.com/k5b4jr" target="_blank">Dua Lipa<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="https://reddit.com/k5b4jr" target="_blank">Taylor Swift<span class="score">&nbsp;</span></a></li>
+                    <li class="loser team-top name-details"><a href="https://reddit.com/k5b4jr" target="_blank">Taylor Swift<span class="score">&nbsp;</span></a></li>
                 </ul>
              </div>     
           </div>
@@ -207,8 +207,8 @@
              <div class="semis-l current">
                 <div class="round-details">Semifinals 1 <br/></div>
                 <ul class ="matchup championship">
-                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">&nbsp;<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">&nbsp;<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/k79kc0" target="_blank">Gal Gadot<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/k79kc0" target="_blank">Vanessa Hudgens<span class="score">&nbsp;</span></a></li>
                 </ul>
              </div>
              <div class="final current">
@@ -222,8 +222,8 @@
              <div class="semis-r current">
                 <div class="round-details">Semifinals 2 <br/></div>
                 <ul class ="matchup championship">
-                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">&nbsp;<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">&nbsp;<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">Dua Lipa<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">Jennifer Aniston<span class="score">&nbsp;</span></a></li>
                 </ul>
              </div>
           </div>
@@ -231,12 +231,12 @@
             <div class="round quarterfinals current">
                 <div class="round-details">Quarterfinals<br/></div>
                 <ul class="matchup">
-                    <li class="team team-top name-details"><a href="https://reddit.com/k5b4xi" target="_blank">Shailene Woodley<span class="score">&nbsp;</span></a></li>
+                    <li class="loser team-top name-details"><a href="https://reddit.com/k5b4xi" target="_blank">Shailene Woodley<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top name-details"><a href="https://reddit.com/k5b4xi" target="_blank">Vanessa Hudgens<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <ul class="matchup">
                     <li class="team team-top name-details"><a href="https://reddit.com/k5b4re" target="_blank">Jennifer Aniston<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="https://reddit.com/k5b4re" target="_blank">Kate Beckinsale<span class="score">&nbsp;</span></a></li>
+                    <li class="loser team-top name-details"><a href="https://reddit.com/k5b4re" target="_blank">Kate Beckinsale<span class="score">&nbsp;</span></a></li>
                 </ul>
              </div>  
              <div class="round round-three current">
