--- a/tournaments/latenightlegs.html
+++ b/tournaments/latenightlegs.html
@@ -208,22 +208,22 @@
                 <div class="round-details">Semifinals 1 <br/></div>
                 <ul class ="matchup championship">
                     <li class="team team-top name-details"><a href="https://reddit.com/k79kc0" target="_blank">Gal Gadot<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="https://reddit.com/k79kc0" target="_blank">Vanessa Hudgens<span class="score">&nbsp;</span></a></li>
+                    <li class="loser team-top name-details"><a href="https://reddit.com/k79kc0" target="_blank">Vanessa Hudgens<span class="score">&nbsp;</span></a></li>
                 </ul>
              </div>
              <div class="final current">
                 <i class="fa fa-trophy"></i>
                 <div class="round-details">Grand Finale <br/></div>
                 <ul class ="matchup championship">
-                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">&nbsp;<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">GAL GADOT<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">&nbsp;<span class="score">&nbsp;</span></a></li>
                 </ul>
              </div>
              <div class="semis-r current">
                 <div class="round-details">Semifinals 2 <br/></div>
                 <ul class ="matchup championship">
-                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">Dua Lipa<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">Jennifer Aniston<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/k9melk" target="_blank">Dua Lipa<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/k9melk" target="_blank">Jennifer Aniston<span class="score">&nbsp;</span></a></li>
                 </ul>
              </div>
           </div>
