added info page

--- a/tournaments/wc2021.html
+++ b/tournaments/wc2021.html
@@ -112,10 +112,10 @@
 
     <br>
     
-    <div class="info">TOURNAMENT SCHEDULE: <a href="https://celebbattles.github.io/tournaments/wc2021/info" target="_blank">/wc2021/info</a></div>
+    <div class="info">TOURNAMENT INFO & SCHEDULE: <a href="https://celebbattles.github.io/tournaments/wc2021/info" target="_blank">/wc2021/info</a></div>
 
     <hr class="ruler">
-    
+
     <div class="container">
       <p class="round-title">GROUP STAGE</p>
       <div class="row justify-content-center">
