don't change link color

--- a/tournaments/wc2021.html
+++ b/tournaments/wc2021.html
@@ -112,7 +112,7 @@
 
     <br>
     
-    <div class="info">TOURNAMENT INFO & SCHEDULE: <a href="https://celebbattles.github.io/tournaments/wc2021/info" target="_blank">/wc2021/info</a></div>
+    <div class="info">TOURNAMENT INFO & SCHEDULE: <a class="info-link" href="https://celebbattles.github.io/tournaments/wc2021/info" target="_blank">/wc2021/info</a></div>
 
     <hr class="ruler">
 
