updated us team

--- a/tournaments/wc2021.html
+++ b/tournaments/wc2021.html
@@ -29,7 +29,7 @@
     <script type="text/javascript">
       $(document).ready(function() {
           var imgArray = [
-              'https://i.imgur.com/bnsLPtZ.png', // USA
+              'https://i.imgur.com/MB30ano.png', // USA
               'https://i.imgur.com/EjQQMb0.png', // Can
               'https://i.imgur.com/urBW9LQ.png', // Ind
               'https://i.imgur.com/LTrc7tn.png', // Aus
