updated us team

--- a/tournaments/wc2021/info.html
+++ b/tournaments/wc2021/info.html
@@ -69,8 +69,8 @@
                   <td>27</td>
                 </tr>
                 <tr>
-                  <td>TAYLOR SWIFT</td>
-                  <td>31</td>
+                  <td>JESSICA ALBA</td>
+                  <td>39</td>
                 </tr>
               </tbody>
             </table>
