--- a/tournaments/latenightlegs.html
+++ b/tournaments/latenightlegs.html
@@ -216,7 +216,7 @@
                 <div class="round-details">Grand Finale <br/></div>
                 <ul class ="matchup championship">
                     <li class="team team-top name-details"><a href="https://reddit.com/kbq1jf" target="_blank">GAL GADOT<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="https://reddit.com/kbq1jf" target="_blank">JENNIFER ANISTON<span class="score">&nbsp;</span></a></li>
+                    <li class="loser team-top name-details"><a href="https://reddit.com/kbq1jf" target="_blank">JENNIFER ANISTON<span class="score">&nbsp;</span></a></li>
                 </ul>
              </div>
              <div class="semis-r current">
