added two more teams

--- a/tournaments/wc2021/info.html
+++ b/tournaments/wc2021/info.html
@@ -243,20 +243,20 @@
                 <tbody>
                   <tr>        
                     <td rowspan="0" class="flag-td"><img class="flag-logo" src="https://i.imgur.com/5gxhc5H.png" title="KOR"></td>
-                    <td></td>
-                    <td></td>
+                    <td>HAN HYO-JOO (C)</td>
+                    <td>33</td>
                   </tr>
                   <tr>
-                    <td></td>
-                    <td></td>
+                    <td>SONG HYE-KYO</td>
+                    <td>39</td>
                   </tr>
                   <tr>
-                    <td></td>
-                    <td></td>
+                    <td>BAE SUZY</td>
+                    <td>26</td>
                   </tr>
                   <tr>
-                    <td></td>
-                    <td></td>
+                    <td>KIM SO-HYUN</td>
+                    <td>21</td>
                   </tr>
                 </tbody>
               </table>
@@ -273,20 +273,20 @@
                   <tbody>
                     <tr>        
                       <td rowspan="0" class="flag-td"><img class="flag-logo" src="https://i.imgur.com/gLOqbah.png" title="ISR"></td>
-                      <td></td>
-                      <td></td>
+                      <td>NATALIE PORTMAN (C)</td>
+                      <td>39</td>
                     </tr>
                     <tr>
-                      <td></td>
-                      <td></td>
+                      <td>GAL GADOT</td>
+                      <td>35</td>
                     </tr>
                     <tr>
-                      <td></td>
-                      <td></td>
+                      <td>BAR REFAELI</td>
+                      <td>35</td>
                     </tr>
                     <tr>
-                      <td></td>
-                      <td></td>
+                      <td>YAEL GROBGLAS</td>
+                      <td>36</td>
                     </tr>
                   </tbody>
                 </table>
