--- a/tournaments/wc2021/info.html
+++ b/tournaments/wc2021/info.html
@@ -305,20 +305,20 @@
                 <tbody>
                   <tr>        
                     <td rowspan="0" class="flag-td"><img class="flag-logo" src="https://i.imgur.com/4NMY9du.png" title="FRA"></td>
-                    <td></td>
-                    <td></td>
+                    <td>Eva Green (C)</td>
+                    <td>40</td>
                   </tr>
                   <tr>
-                    <td></td>
-                    <td></td>
+                    <td>Léa Seydoux</td>
+                    <td>35</td>
                   </tr>
                   <tr>
-                    <td></td>
-                    <td></td>
+                    <td>Marion Cotillard</td>
+                    <td>45</td>
                   </tr>
                   <tr>
-                    <td></td>
-                    <td></td>
+                    <td>Alizée</td>
+                    <td>36</td>
                   </tr>
                 </tbody>
               </table>
@@ -335,20 +335,20 @@
                   <tbody>
                     <tr>        
                       <td rowspan="0" class="flag-td"><img class="flag-logo" src="https://i.imgur.com/4pZWLMS.png" title="ITA"></td>
-                      <td></td>
-                      <td></td>
+                      <td>Monica Bellucci (C)</td>
+                      <td>56</td>
                     </tr>
                     <tr>
-                      <td></td>
-                      <td></td>
+                      <td>Camila Giorgi</td>
+                      <td>28</td>
                     </tr>
                     <tr>
-                      <td></td>
-                      <td></td>
+                      <td>Alessandra Mastronardi</td>
+                      <td>34</td>
                     </tr>
                     <tr>
-                      <td></td>
-                      <td></td>
+                      <td>Miriam Leone</td>
+                      <td>35</td>
                     </tr>
                   </tbody>
                 </table>
@@ -367,20 +367,20 @@
                 <tbody>
                   <tr>        
                     <td rowspan="0" class="flag-td"><img class="flag-logo" src="https://i.imgur.com/avKeWKY.png" title="JAP"></td>
-                    <td></td>
-                    <td></td>
+                    <td>Satomi Ishihara (C)</td>
+                    <td>34</td>
                   </tr>
                   <tr>
-                    <td></td>
-                    <td></td>
+                    <td>Aya Kiguchi</td>
+                    <td>35</td>
                   </tr>
                   <tr>
-                    <td></td>
-                    <td></td>
+                    <td>Nozomi Sasaki</td>
+                    <td>32</td>
                   </tr>
                   <tr>
-                    <td></td>
-                    <td></td>
+                    <td>Minami Hamabe</td>
+                    <td>20</td>
                   </tr>
                 </tbody>
               </table>
@@ -397,20 +397,20 @@
                   <tbody>
                     <tr>        
                       <td rowspan="0" class="flag-td"><img class="flag-logo" src="https://i.imgur.com/dAHQAJA.png" title="BRA"></td>
-                      <td></td>
-                      <td></td>
+                      <td>Morena Baccarin (C)</td>
+                      <td>41</td>
                     </tr>
                     <tr>
-                      <td></td>
-                      <td></td>
+                      <td>Adriana Lima</td>
+                      <td>39</td>
                     </tr>
                     <tr>
-                      <td></td>
-                      <td></td>
+                      <td>Gisele Bundchen</td>
+                      <td>40</td>
                     </tr>
                     <tr>
-                      <td></td>
-                      <td></td>
+                      <td>Alessandra Ambrosio</td>
+                      <td>39</td>
                     </tr>
                   </tbody>
                 </table>
@@ -429,20 +429,20 @@
                 <tbody>
                   <tr>        
                     <td rowspan="0" class="flag-td"><img class="flag-logo" src="https://i.imgur.com/bp2jTeG.png" title="MEX"></td>
-                    <td></td>
-                    <td></td>
+                    <td>Salma Hayek (C)</td>
+                    <td>54</td>
                   </tr>
                   <tr>
-                    <td></td>
-                    <td></td>
+                    <td>Yanet Garcia</td>
+                    <td>30</td>
                   </tr>
                   <tr>
-                    <td></td>
-                    <td></td>
+                    <td>Eiza Gonzalez</td>
+                    <td>30</td>
                   </tr>
                   <tr>
-                    <td></td>
-                    <td></td>
+                    <td>Dulce María</td>
+                    <td>35</td>
                   </tr>
                 </tbody>
               </table>
@@ -459,20 +459,20 @@
                   <tbody>
                     <tr>        
                       <td rowspan="0" class="flag-td"><img class="flag-logo" src="https://i.imgur.com/IJHWznS.png" title="CHN"></td>
-                      <td></td>
-                      <td></td>
+                      <td>Liu Yifei (C)</td>
+                      <td>33</td>
                     </tr>
                     <tr>
-                      <td></td>
-                      <td></td>
+                      <td>Sandra Ma Sichun</td>
+                      <td>32</td>
                     </tr>
                     <tr>
-                      <td></td>
-                      <td></td>
+                      <td>Wang Likun</td>
+                      <td>35</td>
                     </tr>
                     <tr>
-                      <td></td>
-                      <td></td>
+                      <td>Jiang Shuying</td>
+                      <td>34</td>
                     </tr>
                   </tbody>
                 </table>
@@ -491,20 +491,20 @@
                 <tbody>
                   <tr>        
                     <td rowspan="0" class="flag-td"><img class="flag-logo" src="https://i.imgur.com/8qqhdi5.png" title="SPA"></td>
-                    <td></td>
-                    <td></td>
+                    <td>Ana de Armas (C)</td>
+                    <td>32</td>
                   </tr>
                   <tr>
-                    <td></td>
-                    <td></td>
+                    <td>Penelope Cruz</td>
+                    <td>46</td>
                   </tr>
                   <tr>
-                    <td></td>
-                    <td></td>
+                    <td>Oona Chaplin</td>
+                    <td>34</td>
                   </tr>
                   <tr>
-                    <td></td>
-                    <td></td>
+                    <td>Ester Expósito</td>
+                    <td>20</td>
                   </tr>
                 </tbody>
               </table>
@@ -521,20 +521,20 @@
                   <tbody>
                     <tr>        
                       <td rowspan="0" class="flag-td"><img class="flag-logo" src="https://i.imgur.com/EtsgX9z.png" title="HUN"></td>
-                      <td></td>
-                      <td></td>
+                      <td>Barbara Palvin (C)</td>
+                      <td>27</td>
                     </tr>
                     <tr>
-                      <td></td>
-                      <td></td>
+                      <td>Zita Gorog</td>
+                      <td>41</td>
                     </tr>
                     <tr>
-                      <td></td>
-                      <td></td>
+                      <td>Jazmin Dammak</td>
+                      <td>36</td>
                     </tr>
                     <tr>
-                      <td></td>
-                      <td></td>
+                      <td>Diana Meszaros</td>
+                      <td>38</td>
                     </tr>
                   </tbody>
                 </table>
