--- a/tournaments/wc2021.html
+++ b/tournaments/wc2021.html
@@ -36,9 +36,17 @@
               'https://i.imgur.com/oxcg6Zz.png', // Eng
               'https://i.imgur.com/rtSLhMu.png', // Swe
               'https://i.imgur.com/EY4KFK8.png', // Kor
-              'https://i.imgur.com/j9ajh5J.png'  // Isr
+              'https://i.imgur.com/j9ajh5J.png', // Isr
+              'https://i.imgur.com/XU5qnie.png', // Hun
+              'https://i.imgur.com/WpgT1Qz.png', // Bra
+              'https://i.imgur.com/RRSZItT.png', // Chn
+              'https://i.imgur.com/VyVV1u2.png', // Fra
+              'https://i.imgur.com/dayRWUp.png', // Ita
+              'https://i.imgur.com/FjvQQGu.png', // Jap
+              'https://i.imgur.com/TYp7aOY.png', // Mex
+              'https://i.imgur.com/wUk5R9w.png'  // Spn
           ];
-          var n = 8; // Number of countries
+          var n = 16; // Number of countries
           var i = Math.floor(Math.random() * n);
           var ctr = 0;
           while (ctr < n) {
@@ -93,6 +101,38 @@
           <img id="img7" style="width:100%">
         </div>
 
+        <div class="mySlides">
+          <img id="img8" style="width:100%">
+        </div>
+        
+        <div class="mySlides">
+          <img id="img9" style="width:100%">
+        </div>
+
+        <div class="mySlides">
+          <img id="img10" style="width:100%">
+        </div>
+
+        <div class="mySlides">
+          <img id="img11" style="width:100%">
+        </div>
+
+        <div class="mySlides">
+          <img id="img12" style="width:100%">
+        </div>
+
+        <div class="mySlides">
+          <img id="img13" style="width:100%">
+        </div>
+
+        <div class="mySlides">
+          <img id="img14" style="width:100%">
+        </div>
+
+        <div class="mySlides">
+          <img id="img15" style="width:100%">
+        </div>
+
         <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
         <a class="next" onclick="plusSlides(1)">&#10095;</a>
     </div>
@@ -108,6 +148,14 @@
         <span class="dot" onclick="currentSlide(6)"></span>
         <span class="dot" onclick="currentSlide(7)"></span>
         <span class="dot" onclick="currentSlide(8)"></span>
+        <span class="dot" onclick="currentSlide(9)"></span>
+        <span class="dot" onclick="currentSlide(10)"></span> 
+        <span class="dot" onclick="currentSlide(11)"></span> 
+        <span class="dot" onclick="currentSlide(12)"></span> 
+        <span class="dot" onclick="currentSlide(13)"></span> 
+        <span class="dot" onclick="currentSlide(14)"></span>
+        <span class="dot" onclick="currentSlide(15)"></span>
+        <span class="dot" onclick="currentSlide(16)"></span>
     </div>
 
     <br>
